# llm.c.vs

./: ..gitignore.un~  .CMakeLists.txt.un~  .gitignore  CMakeLists.txt  CMakeLists.txt~  all.cmd  test_gpt2.c  test_gpt2.cu  train_gpt2.c  train_gpt2.cu  train_llama3.py
dev/: download_starter_pack.sh
dev/data/: data_common.py  tinystories.py
llmc/: cuda_common.h  cuda_utils.cuh  dataloader.h  rand.h  utils.h  zero.cuh
